# caltrain-mcp

./: CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  semantic-release.yml  update-gtfs.yml
data/caltrain-ca-us/: stop_times.txt
scripts/: __init__.py  fetch_gtfs.py  lint.py
src/caltrain_mcp/: gtfs.py  server.py
src/caltrain_mcp/data/caltrain-ca-us/: shapes.txt  stop_times.txt
tests/: conftest.py  test_fetch_gtfs.py  test_gtfs.py  test_server.py
